# raccoon-cli

./: .gitignore  .gitmodules  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  README.md  deploy.sh  install.py  install.sh  pyproject.toml  setup.py
.github/docker/: Dockerfile
.github/workflows/: build-release.yml  ci-image.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.raccoon/: libstp_step_cache.json
docs/: PYTHON_API.md  REMOTE_DEVELOPMENT.md
example/: .gitignore  raccoon.project.yml  run.sh  upload.sh
example/.raccoon/: libstp_step_cache.json
example/SensorCalibration/: install.py  raccoon.project.yml  run.sh  upload.sh
example/manual-example/: raccoon.project.yml  upload.sh
example/src/: __init__.py  main.py
example/tobi-test/: .raccoon_manifest.json  .raccoonignore  log  mission_layouts.json  raccoon.project.yml  racoon.calibration.yml  run.sh  tune.py  tune_results.json  tune_turn.db  upload.sh
example/tobi-test (2)/: .gitignore  raccoon.project.yml  racoon.calibration.yml
raccoon/: __init__.py  checkpoint.py  cli.py  fingerprint.py  logging_utils.py  mission_codegen.py  mission_config.py  naming.py  project.py  sync_state.py  version_checker.py  yaml_utils.py
raccoon/client/: __init__.py  api.py  auto_merge.py  conflict_resolver.py  connection.py  discovery.py  lcm_handler.py  output_handler.py  sftp_sync.py  ssh_keys.py
raccoon/codegen/: __init__.py  builder.py  cache.py  class_builder.py  generator.py  introspection.py  pipeline.py  type_index.py  yaml_resolver.py
raccoon/commands/: __init__.py  calibrate.py  checkpoint.py  codegen.py  completion.py  connect.py  create.py  lcm.py  list_cmd.py  remove_cmd.py  reorder_cmd.py  run.py  status.py  sync_cmd.py  update.py  web.py  wizard.py
raccoon/exlcm/: __init__.py  quaternion_t.py  scalar_f_t.py  scalar_i32_t.py  scalar_i8_t.py  vector3f_t.py  yolo_box_t.py  yolo_frame_t.py
raccoon/ide/: __init__.py  app.py  config.py  launcher.py
raccoon/server/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py
raccoon/systemd/: raccoon.service
raccoon_cli/: __init__.py  _version.py  checkpoint.py  cli.py  fingerprint.py  git_history.py  logging_utils.py  mission_codegen.py  mission_config.py  project.py  project_creation.py  project_services.py  run_configurations.py  run_recording.py  simulation.py  table_map.py  validate.py  validation.py  version_checker.py
raccoon_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raccoon_cli/client/: __init__.py  api.py  connection.py  discovery.py  lcm_handler.py  output_handler.py  sftp_sync.py  ssh_keys.py
raccoon_cli/codegen/: __init__.py  builder.py  class_builder.py  introspection.py  pipeline.py  type_index.py  yaml_resolver.py
raccoon_cli/commands/: __init__.py  calibrate.py  checkpoint.py  codegen.py  completion.py  connect.py  (+18 more)
remote-example/: raccoon.project.yml  run.sh  upload.sh
remote-project/: raccoon.project.yml  run.sh  upload.sh
tests/: conftest.py  test_checkpoint.py  test_cmd_trace.py  test_cmd_trace_robot.py  test_codegen_stubs.py  test_command_locking.py  test_create_mission.py  test_defs_generator.py  test_fingerprint.py  test_git_history.py  test_ide_mission_routes.py  test_ide_project_repository.py  test_ide_run_repository.py  test_ide_run_routes.py  test_journal.py  test_live_stream.py  test_log_crash.py  test_log_finder.py  test_log_parser.py  test_log_run_cache.py  test_network_routes.py  test_output_handler.py  test_project_manager.py  test_project_services.py  test_project_sync_state.py  test_run_artifacts.py  test_run_bundle.py  test_run_local.py  test_run_progress.py  test_sftp_sync.py  test_step_analyzer.py  test_step_index_refresh.py  test_sync_cmd_snapshots.py  test_table_map.py  test_update_behavior.py  test_validate.py  test_waschbaer_cli.py  test_washbaer_cli.py  test_wizard.py
(+245 files in other folders)
