[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoon"
version = "0.1.0"
description = "Toolchain CLI for libstp projects"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "click>=8.0",
    "black",
    "rich>=10.0",
    "setuptools>=61.0",
    "wheel>=0.45.1",
    "jinja2>=3.0",
    "jinja2-time>=0.2",
]

[project.scripts]
raccoon = "raccoon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["raccoon*"]
