[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoon"
dynamic = ["version"]
description = "Toolchain CLI for libstp projects"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "click>=8.0",
    "black",
    "rich>=10.0",
    "setuptools>=61.0",
    "wheel>=0.45.1",
    "jinja2>=3.0",
    "jinja2-time>=0.2",
    # Server dependencies (Pi-side)
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=10.0",
    # Client dependencies (Laptop-side)
    "paramiko>=4.0",
    "httpx>=0.24",
    "websocket-client>=1.0",
    "pyftpsync>=4.0",
    # IDE backend dependencies
    "libcst>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
raccoon = "raccoon.cli:main"
raccoon-server = "raccoon.server.cli:main"

[tool.setuptools.dynamic]
version = {attr = "raccoon._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["raccoon*", "raccoon.exlcm"]

[tool.setuptools.package-data]
raccoon = [
    "templates/**/*",
    "templates/**/*.jinja",
    "templates/**/*.py",
    "templates/**/*.sh",
    "templates/**/*.gitignore",
    "web-ide-dist/**/*",
]
